--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -14,6 +14,7 @@
     height: 200px;
     border: 1px solid rgb(236, 213, 112);
     margin-left: 3em;
+    background-color: rgb(0, 0, 0);
 }
 
 .square-text {
